# ai_research

./: .env.example  .gitignore  LICENSE  README.md  bootstrap_ai_research_brief.py  pyproject.toml  requirements.txt
.github/: daily-brief-catchup.force  daily-brief-formal-retry.force  daily-brief.force
configs/: brief_categories.yaml  editorial_rules.yaml  scoring.yaml  scoring.yml  site.yaml  site.yml  title_translation_glossary.yml  topics.yml
docs/: cloudflare-cron-dispatch.md  deploy-cloudflare.md  operations.md
open_evidence_runner/: arxiv_backfill.py  audit_osf_public_files.py  audit_statistical_data_schema.py  combine_arxiv.py  combine_crossref.py  combine_openalex.py  combine_openalex_terms.py  combine_pubmed.py  combine_seed_rescue.py  combine_semantic_scholar.py  crossref_backfill.py  crossref_cursor_diagnostic.py  diagnose_mendeley_public_api.py  download_and_audit_open_data.py  export_fulltext_queue.py  extract_remote_artifact_summary.py  extract_remote_crossref_year.py  fulltext_archive_batch.py  fulltext_batch_02_audit.py  fulltext_batch_1.json  fulltext_batch_audit.py  independent_screen_v2.py  missed_gold_seeds_20260724.csv  neon_data_api_identity.py  neon_data_api_import.py  normalize_screen_s2_arxiv.py  open_data_targets.json  openalex_backfill.py  openalex_term_backfill.py  openalex_terms.json  osf_targets.json  prepare_screen_v2_for_staging.py  prepare_selected_candidates_for_staging.py  pubmed_backfill.py  pubmed_backfill_v2.py  pubmed_queries.json  sanitize_jsonl_for_neon.py  screen_pubmed.py  screen_seed_rescue.py  seed_rescue_queries.json  (+2 more)
(+709 files in other folders)
