[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-research-brief"
version = "0.1.0"
description = "Reproducible AI paper brief pipeline and static site."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7", "pyyaml>=6.0", "feedparser>=6.0", "httpx>=0.27", "tenacity>=8.2", "jinja2>=3.1"]

[project.scripts]
ai-brief = "ai_research_brief.cli:main"

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]
